Finished with section routes and tests.
Changed schemas in documentation and started on task routes
